src/App.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
@import 'tailwindcss';

@theme {
  --font-sans: 'Montserrat', 'Nunito Sans', ui-sans-serif, system-ui, sans-serif;
}

@layer base {
  html {
    @apply font-sans;
  }

  input[type='password']::-ms-reveal,
  input[type='password']::-ms-clear {
    display: none;
  }
}

